# try-c

./: .clang-format  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  Makefile  Makefile.template  README.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
.theia/: settings.json
01.helloworld/: Makefile  Taskfile.yml  main.c
01.helloworld/src/: main.c
02.const_with_pointer/: .gitignore
02.const_with_pointer/src/: main.c
03.enum_len/: Taskfile.yml
03.enum_len/src/: main.c
04.static_data_bss_section/: README.md  Taskfile.yml  global_static_no_init.c  global_static_with_init.c  local_static.c  no_static.c
05.init_array/: Taskfile.yml  main.c
06.stdout-unbuffered-with-stdbuf/: .gitignore  README.md  Taskfile.yml  app.c
07.endian_detect/: README.md  Taskfile.yml  app.c
08.tmpfile/: Taskfile.yml  app.c
09.open_unlink/: Taskfile.yml  app.c
10.rewind/: app.c
11.ptrdiff_t/: Taskfile.yml  app.c
12.printf_hex/: app.c
21.return-local-addr/: Makefile
22.wrong-pointer-arithmetic/: .gitignore  Makefile
81.hashmap/: .gitignore  README.md  hashmap.h
advanced/01.hashmap/: Makefile  benchmark.c  hashmap.c
basic/01.helloworld/: Makefile
basic/21.return-local-addr/: Makefile  main.c
basic/22.wrong-pointer-arithmetic/: Makefile  main.c
basic/helloworld/simple/: Taskfile.yml
cheatsheets/: README.md
examples/: README.md
examples/helloworld/: Makefile  helloworld.c
include/: chararray.h  commonfuncs.h  forloop.h  helloworld.h  misc.h  printf01.h
network/tcp_echo/client/: Makefile  client.c
network/tcp_echo/server/: Makefile  server.c
sample_shared_lib/: CMakeLists.txt  sample_shared_lib.c
src/: chararray.c  commonfuncs.c  examples.h  forloop.c  helloworld.c  main.c  misc.c  printf01.c
src/basic/array/: chararray.c
src/basic/helloworld/: helloworld.c
src/basic/loop/: forloop.c
src/basic/misc/: misc.c
src/basic/stdinout/: stdin.c  stdout.c
src/bool_type/: CMakeLists.txt  bool_type.c
src/cello_helloworld/: CMakeLists.txt  cello_helloworld.c
src/constants_bin/: CMakeLists.txt  constants_bin.c
src/constants_hex/: CMakeLists.txt  constants_hex.c
src/constants_octal/: CMakeLists.txt  constants_octal.c
src/define_macro/: CMakeLists.txt  define_macro.c  define_macro.h
src/endian_convert/: CMakeLists.txt  endian_convert.c
src/escape_sequence/: CMakeLists.txt  escape_sequence.c
src/extern_function/: CMakeLists.txt  main.c  sub.c
src/forloop/: CMakeLists.txt  forloop.c
src/header_include/: CMakeLists.txt  header1.h  header_include.c
src/header_include/include/: header2.h
src/header_include/include2/: header3.h
src/helloworld/: CMakeLists.txt  helloworld.c
src/main_function/: CMakeLists.txt  main_func.c
src/return_exit_success/: CMakeLists.txt  return_exit_success.c
src/shared_lib/: CMakeLists.txt  shared_lib.c
src/shared_lib/inc/: lib.h
src/shared_lib/lib/: CMakeLists.txt  lib.c
src/sizeof_int/: CMakeLists.txt  sizeof_int.c
src/static_lib/: CMakeLists.txt  static_lib.c
src/static_lib/inc/: lib.h
src/static_lib/lib/: CMakeLists.txt  lib.c
