cmake_minimum_required(VERSION 3.16)
project(try-c)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_FLAGS "-Wall")

add_subdirectory(src/helloworld)
add_subdirectory(src/forloop)
add_subdirectory(src/extern_function)
add_subdirectory(src/main_function)
add_subdirectory(src/escape_sequence)
add_subdirectory(src/header_include)
add_subdirectory(src/define_macro)
add_subdirectory(src/sizeof_int)