cmake_minimum_required(VERSION 3.16)
project(try-c)

add_subdirectory(src/helloworld)
add_subdirectory(src/forloop)
add_subdirectory(src/extern_function)
add_subdirectory(src/main_function)
add_subdirectory(src/escape_sequence)
add_subdirectory(src/header_include)
add_subdirectory(src/define_macro)
add_subdirectory(src/sizeof_int)
add_subdirectory(src/return_exit_success)
add_subdirectory(src/bool_type)
add_subdirectory(src/static_lib)
add_subdirectory(src/shared_lib)
add_subdirectory(src/constants_octal)
add_subdirectory(src/constants_hex)
add_subdirectory(src/constants_bin)